[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
chrono = { version = "0.4.24", features = ["serde"] }
warp = "0.2.1"
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
postgres = "0.19"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }